--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,11 @@
 {
-  "version": 2,
-  "functions": {
-    "api/**/*.js": {
-      "memory": 1024,
-      "maxDuration": 30
-    }
-  }
+  "name": "gemini-proxy",
+  "version": "1.0.0",
+  "description": "CORS proxy for Gemini API",
+  "main": "api/gemini.js",
+  "scripts": {
+    "dev": "vercel dev"
+  },
+  "dependencies": {},
+  "devDependencies": {}
 }
