--- a/package.json
+++ b/package.json
@@ -2,5 +2,10 @@
   "name": "gemini-proxy",
   "version": "1.0.0",
   "description": "CORS proxy for Gemini API",
-  "main": "api/gemini.js"
+  "main": "api/gemini.js",
+  "scripts": {
+    "dev": "vercel dev"
+  },
+  "dependencies": {},
+  "devDependencies": {}
 }
