--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,20 @@
 {
-  "name": "gemini-proxy",
-  "version": "1.0.0",
-  "description": "CORS proxy for Gemini API",
-  "main": "api/gemini.js",
-  "scripts": {
-    "dev": "vercel dev"
+  "version": 2,
+  "functions": {
+    "api/**/*.js": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
+        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
+      ]
+    }
+  ]
 }
